--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -17,43 +17,36 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg shadow-sm rounded-bottom">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}">JOVRNEY</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="button1 btn btn-simple" href="{% url 'about' %}">About</a></li>
-                    <li class="nav-item"><a class="button1 btn btn-simple"
-                            href="{% url 'documentation' %}">Documentation</a></li>
-                    <li id="git_icon">
-                        <a href="https://github.com/Augusto-Sant"><svg xmlns="http://www.w3.org/2000/svg" width="25"
-                                height="25" fill="currentcolor Black" class="githu bi bi-github" viewBox="0 0 16 16">
-                                <path
-                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                            </svg></a>
-                    </li>
-                </ul>
-                <!-- os de lá >> -->
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                    <li><a class="buttonprof btn btn-info" href="{% url 'accounts:profile_view' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                      </svg></a></li>
-                    <li><a class="button1 btn btn-light" href="{% url 'accounts:logout' %}">Logout</a></li>
-                    {% else %}
-                    <li>
-                        <a type="button" class="button1 btn btn-primary" href="{% url 'accounts:register_view' %}">Sign
-                            Up</a>
-                    </li>
-                    <li><a class="button_nav btn btn-light" href="{% url 'accounts:login_view' %}">Log in</a></li>
-                    {% endif %}
-                </ul>
-            </div>
+        <a class="navbar-brand" href="{% url 'index' %}">JOVRNEY</a>
+        <ul class="navbar-nav me-auto">
+              <li class="nav-item"><a class="button1 btn btn-simple" href="{% url 'about' %}">About</a></li>
+              <li class="nav-item"><a class="button1 btn btn-simple"
+                      href="{% url 'documentation' %}">Documentation</a></li>
+              <li id="git_icon">
+                  <a href="https://github.com/Augusto-Sant"><svg xmlns="http://www.w3.org/2000/svg" width="25"
+                          height="25" fill="currentcolor Black" class="githu bi bi-github" viewBox="0 0 16 16">
+                          <path
+                              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                      </svg></a>
+              </li>
+          </ul>
+          <!-- os de lá >> -->
+          <ul class="navbar-nav ms-auto">
+              {% if user.is_authenticated %}
+              <li><a class="buttonprof btn btn-info" href="{% url 'accounts:profile_view' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                  <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                </svg></a></li>
+              <li><a class="button1 btn btn-light" href="{% url 'accounts:logout' %}">Logout</a></li>
+              {% else %}
+              <li>
+                  <a type="button" class="button1 btn btn-primary" href="{% url 'accounts:register_view' %}">Sign
+                      Up</a>
+              </li>
+              <li><a class="button_nav btn btn-light" href="{% url 'accounts:login_view' %}">Log in</a></li>
+              {% endif %}
+          </ul>
         </div>
     </nav>
     <div class="container">
